Fix component spacing

--- a/docs/_sass/foodrem.scss
+++ b/docs/_sass/foodrem.scss
@@ -368,7 +368,6 @@ article.post {
     }
 
     hr {
-      margin-top: 1rem;
       margin-bottom: 1rem;
     }
   }
